# katric

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  load_submodules.sh
apps/: CMakeLists.txt  cetric.cpp  git_hash.cpp  git_hash.h  katric.cpp  parse_parameters.h  shared_memory_counter.cpp  shmetric-benchmark.cpp  shmetric.cpp
cmake/: AddAsanBuildType.cmake  CheckGit.cmake  FileEmbed.cmake  Findsparsehash.cmake
configs/: 2d-grid.toml  cetric.toml  ditric.toml  hybrid.toml
examples/: examples.yaml  hiv.first_out  hiv.head  hiv.metis  metis-sample.first_out  metis-sample.head  triangle.metis
examples/partitions/: com-amazon_k1024  com-amazon_k128  com-amazon_k16  com-amazon_k16384  com-amazon_k2  com-amazon_k2048  com-amazon_k256  com-amazon_k32  com-amazon_k4  com-amazon_k4096  com-amazon_k512  com-amazon_k64  com-amazon_k8  com-amazon_k8192
experiments/: .gitignore  README.md  buf-tric.suite.yaml  cetric-from-config.py  command-template.txt  example.suite.yaml  expcore.py  graph-partitioning.suite.yaml  havoqgt-missing-real-world.suite.yaml  havoqgt-missing-weak-rgg.suite.yaml  havoqgt-missing-weak.suite.yaml  havoqgt-missing.suite.yaml  havoqgt-rmat.suite.yaml  havoqgt.suite.yaml  hybrid-detail-big.suite.yaml  hybrid-detail.suite.yaml  hybrid.suite.yaml  i10.env  orient-locally.suite.yaml  output.txt  partition.sh  partitioned_no_lb.suite.yaml  plain-tric-missing.suite.yaml  plain-tric-rmat.suite.yaml  plain-tric.suite.yaml  real-world-cetric-x-async.suite.yaml  real-world-communcation.suite.yaml  real-world-paper-hybrid-old.suite.yaml  real-world-paper-hybrid-twitter.suite.yaml  real-world-paper-hybrid.suite.yaml  real-world-patric-no-buffering.suite.yaml  real-world.suite.yaml  requirements.txt  run-experiments.py  run_shmem.sh  runners.py  sbatch-template.txt  shared_memory.suite.yaml  simple_runner.py  supermuc.env  (+24 more)
experiments/all-suites/: buf-tric.suite.yaml  graph-partitioning.suite.yaml  havoqgt.suite.yaml  hybrid-detail-big-patric.suite.yaml  hybrid-detail-patric.suite.yaml  hybrid-detail.suite.yaml  hybrid-new.suite.yaml  hybrid-test.suite.yaml  partitioned.suite.yaml  plain-tric.suite.yaml  real-world-cetric-x-load-balancing.suite.yaml  real-world-cetric-x.suite.yaml  real-world-hybrid-fixed.suite.yaml  real-world-intersection.suite.yaml  real-world-paper-hpec.suite.yaml  real-world-paper-hybrid-fixed.suite.yaml  real-world-paper-hybrid-old.suite.yaml  real-world-paper-hybrid-tbb-others.suite.yaml  real-world-paper-hybrid-tbb.suite.yaml  real-world-paper-missing.suite.yaml  real-world-paper.suite.yaml  real-world-patric.suite.yaml  tom2d.suite.yaml  weak-scaling-correct-pinning.suite.yaml  weak-scaling-edge-partitioned.suite.yaml  weak-scaling-full-again-new-cetric-x.suite.yaml  weak-scaling-full-again-new.suite.yaml  weak-scaling-full.suite.yaml  weak-scaling-hybrid-variants.suite.yaml  weak-scaling-intersection.suite.yaml  weak-scaling-local-cost.suite.yaml  weak-scaling-longer.suite.yaml  weak-scaling-paper-missing-rhg.suite.yaml  weak-scaling-paper-rmat.suite.yaml  weak-scaling-parameters.suite.yaml  weak-scaling-smaller.suite.yaml  weak-scaling.suite.yaml
experiments/paper-suites/: havoqgt.suite.yaml  hybrid-realworld.suite.yaml  real-world.suite.yaml  tric.suite.yaml  weak-scaling.suite.yaml
include/: comm_utils.h  communicator.h  concurrent_buffered_queue.h  config.h  cost_function.h  indirect_message_queue.h  load_balancing.h  message_statistics.h  mpi_traits.h  statistics.h  thread_pool.h  timer.h  util.h
include/cetric/: atomic_debug.h  comm_utils.h  communicator.h  concurrent_buffered_queue.h  config.h  cost_function.h  indirect_message_queue.h  load_balancing.h  message_statistics.h  mpi_traits.h  statistics.h  task_pool.h  thread_pool.h  timer.h  util.h
include/cetric/counters/: cetric.h  cetric_edge_iterator.h  intersection.h  shared_memory_cetric.h  shared_memory_edge_iterator.h
include/cetric/datastructures/: auxiliary_node_data.h  graph.h  graph_definitions.h  span.h
include/cetric/datastructures/distributed/: compact_graph.h  distributed_graph.h  graph_communicator.h  helpers.h  simple_graph.h
include/counters/: cetric.h  cetric_edge_iterator.h  shared_memory_edge_iterator.h
include/datastructures/: auxiliary_node_data.h  graph.h  graph_definitions.h  span.h
include/datastructures/distributed/: ]  distributed_graph.h  graph_communicator.h  helpers.h  local_graph_view.h  simple_graph.h
include/io/: definitions.h  distributed_graph_io.h  graph_io.h  mpi_io_wrapper.h
scripts/: run_clang_format.sh
src/: CMakeLists.txt  distributed_graph_io.cpp  shared_memory_edge_iterator.cpp
tests/: CMakeLists.txt  broadcast-test.cpp  catch2_main_with_backward.cpp  factorial_test.cpp  gather_test.cpp  graph_datastructure_test.cpp  intersection_test.cpp  load_balancing_test.cpp  mpi-catch2-main.cpp  mpi-gtest-main.cpp  mpi-wrapper-listener-unit-tests.cpp  orientation_test.cpp  rank_encoded_node_id_test.cpp  test.cpp  test_main_mpi.cpp
