include(CheckGit)
include(FileEmbed)
CheckIsGitRepo(CETRIC_IS_REPO)
FileEmbedSetup()
add_library(git_hash git_hash.cpp)
if (CETRIC_IS_REPO)
  message(STATUS "Extracting git commit from repo")
  CheckGitSetup()
  target_link_libraries(git_hash PRIVATE git_version)
  target_compile_definitions(git_hash PRIVATE CETRIC_REPO_GIT_HASH)
else()
  message(STATUS "Extracting git commit from .degit-sync")
  FileEmbedAdd("${CMAKE_SOURCE_DIR}/.degit-sync/commit")
  target_link_libraries(git_hash PRIVATE file_embed)
  target_compile_definitions(git_hash PRIVATE CETRIC_FILE_GIT_HASH)
endif()
add_executable(cetric cetric.cpp)
add_executable(shared_memory_counter shared_memory_counter.cpp)

target_link_libraries(cetric PRIVATE cetric-lib CLI11::CLI11 MPI::MPI_CXX)
target_link_libraries(cetric PRIVATE OpenMP::OpenMP_CXX)
target_link_libraries(cetric PUBLIC ${BACKWARD_ENABLE})
target_link_libraries(cetric PUBLIC ${BACKWARD_LIBRARIES})
target_compile_definitions(cetric PUBLIC ${BACKWARD_DEFINITIONS})
target_link_libraries(cetric PUBLIC git_hash)

target_link_libraries(shared_memory_counter PRIVATE cetric-lib CLI11::CLI11)
